--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 /* Map styles */
 #map {
-    height: 600px;
+    height: calc(100vh - 120px);
     width: 100%;
 }
 
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 600px;
+    height: calc(100vh - 120px);
 }
 
 /* Common container styles */
@@ -36,13 +36,51 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-@media (min-width: 1024px) {
-    .lg\\:grid-cols-4 {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+/* Flexbox layout utilities */
+.flex {
+    display: flex;
+}
+
+.flex-1 {
+    flex: 1 1 0%;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
+.min-h-screen {
+    min-height: 100vh;
+}
+
+.w-80 {
+    width: 20rem;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.h-full {
+    height: 100%;
+}
+
+/* Responsive adjustments */
+@media (max-width: 1024px) {
+    .flex {
+        flex-direction: column;
     }
     
-    .lg\\:col-span-3 {
-        grid-column: span 3 / span 3;
+    .w-80 {
+        width: 100%;
+    }
+    
+    #map {
+        height: 400px;
+    }
+    
+    .loading {
+        height: 400px;
     }
 }
 
