--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 /* Map styles */
 #map {
-    height: calc(100vh - 120px);
+    height: 100%;
     width: 100%;
 }
 
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - 120px);
+    height: 100%;
+    width: 100%;
 }
 
 /* Common container styles */
