--- a/components/filter-section.html
+++ b/components/filter-section.html
@@ -99,17 +99,17 @@
                             <label class="flex items-center">
                                 <input type="checkbox" id="proposedFundingFilter" class="special-filter-checkbox mr-2">
                                 <span class="special-filter-circle proposed-funding"></span>
-                                <span class="ml-2">Proposed for Funding</span>
+                                <span class="ml-2">Proposed for Funding <span id="proposedFundingCount" class="text-sm text-gray-500">(0)</span></span>
                             </label>
                             <label class="flex items-center">
                                 <input type="checkbox" id="ongoingHarborFilter" class="special-filter-checkbox mr-2">
                                 <span class="special-filter-circle ongoing-harbor"></span>
-                                <span class="ml-2">Ongoing Harbor Project</span>
+                                <span class="ml-2">Ongoing Harbor Project <span id="ongoingHarborCount" class="text-sm text-gray-500">(0)</span></span>
                             </label>
                             <label class="flex items-center">
                                 <input type="checkbox" id="urbanCentersFilter" class="special-filter-checkbox mr-2">
                                 <span class="special-filter-circle urban-centers"></span>
-                                <span class="ml-2">Urban Centers</span>
+                                <span class="ml-2">Urban Centers <span id="urbanCentersCount" class="text-sm text-gray-500">(0)</span></span>
                             </label>
                         </div>
                     </div>
